--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,9 +3,9 @@ build:
     tools:
         python: "3.12"
 
-python:
-    version: 3.8
-    setup_py_install: false
+#python:
+#    version: "3.12"
+#    setup_py_install: false
 
 requirements_file: docs/sphinx/requirements_template_docs.txt
 
