--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,6 +2,9 @@ build:
     os: ubuntu-22.04
     tools:
         python: "3.12"
+    jobs:
+        pre_build:
+          - python ./docs/sphinx/json2rst.py
 
 python:
     install:
@@ -14,3 +17,4 @@ python:
 # Don't build any extra formats
 formats:
     - pdf
+
