--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -8,10 +8,15 @@ build:
 
 python:
     install:
-    - requirements: docs/sphinx/requirements.txt
 
 
 # Don't build any extra formats
 formats:
     - pdf
+
+python:
+  install:
+    - requirements: docs/sphinx/requirements.txt
+    - method: pip
+      path: .
 
