--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -9,8 +9,8 @@ build:
 python:
   install:
     - requirements: docs/sphinx/requirements.txt
-    - method: pip
-      path: .
+#    - method: pip
+#      path: .
 
 # Don't build any extra formats
 formats:
