--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,7 +4,8 @@ build:
         python: "3.12"
     jobs:
         pre_build:
-          - export PATH=$PYTHONPATH:./PYTHONPATH ; python ./docs/build_doc.py
+          - export $PYTHONPATH
+          - export PYTHONPATH=$PYTHONPATH:./PYTHONPATH ; python ./docs/build_doc.py
 
 python:
   install:
