--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -5,7 +5,7 @@ build:
     jobs:
         pre_build:
           - echo $PYTHONPATH
-          - export PYTHONPATH=$PYTHONPATH:./PYTHONPATH ; echo $PYTHONPATH; python ./docs/build_doc.py
+          - export PYTHONPATH=$PYTHONPATH:./python/ ; echo $PYTHONPATH; python ./docs/build_doc.py
 
 python:
   install:
