--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,6 +4,7 @@ build:
         python: "3.12"
     jobs:
         pre_build:
+          - git clone https://github.com/sdss/idlutils.git $READTHEDOCS_VIRTUALENV_PATH/idlutils
           - export PYTHONPATH=$PYTHONPATH:./python/ ; echo $PYTHONPATH; python ./docs/build_doc.py
 
 python:
